<resources>
    <string name="app_name">Dinci</string>
    <string name="title_activity_refencia">RefenciaActivity</string>
    <string name="txt_username">Nombre de usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_login">Login</string>
    <string name="dont_have_account">No tienes cuenta?,</string>
    <string name="new_account">click aqui!</string>
    <string name="hint_email">Correo</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_password">Contrasena</string>
    <string name="hint_confirmPassword">Confirma contrasena</string>
    <string name="btn_crear">UNETE</string>
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
    <string name="card_username">Incidente 1</string>
    <string name="card_firstword">Hace</string>
    <string name="card_time">10 dias</string>
    <string name="card_likenumber">Solucionado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="reg_name">nombre</string>
    <string name="reg_adress">direccion</string>
    <string name="reg_detail">detalle</string>
    <string name="txt_resgister">Registrar</string>
    <string name="hint_phonenumber">telefono</string>
    <string name="lorem">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo \"Contenido aquí, contenido aquí\". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de \"Lorem Ipsum\" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</string>
    <string name="hint_dni">DNI</string>
</resources>
