<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    cardview:cardCornerRadius="@dimen/card_border_radius">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/incidentedafault"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/text_margin_horizontal"
            android:paddingBottom="@dimen/text_margin_vertical"
            android:layout_gravity="bottom"
            android:background="@color/card_background_text">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_username"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/card_username_size"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_firstword"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/card_time_size"/>
                <TextView
                    android:id="@+id/cardTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/time_margin"
                    android:text="@string/card_time"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/card_time_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cardviewCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_likenumber"
                    android:paddingLeft="@dimen/time_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/card_time_size"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>