<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oldspace.starcraftnet.view.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_padding"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TexteditBlack"
                    android:layout_marginTop="@dimen/textedit_magin_top">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtDniCitizen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_dni"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TexteditBlack"
                    android:layout_marginTop="@dimen/textedit_magin_top">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtNameCitizen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TexteditBlack"
                    android:layout_marginTop="@dimen/textedit_magin_top">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPasswordCitizen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnNewAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:text="@string/btn_crear"
                    android:theme="@style/RaisedButtonDark"/>
            </LinearLayout>
        </ScrollView>
</android.support.design.widget.CoordinatorLayout>
